<resources>
    <string name="app_name">菲林</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="other_ways">其他賬號登陸</string>
    <string name="login">登陸</string>
    <string name="register">註冊</string>
    <string name="mobile_register">手機註冊</string>
    <string name="mobile_login">手機登錄</string>
    <string name="password_login">密碼登錄</string>
    <string name="account_login">賬號登陸</string>
    <string name="code_login">驗證碼登陸</string>
    <string name="enter_coder">請輸入驗證碼</string>
    <string name="code">驗證碼</string>
    <string name="send_code">發送驗證碼</string>
    <string name="next">下一步</string>
    <string name="phone_num">手機號碼</string>
    <string name="set_pass">設置密碼</string>
    <string name="user_name">用戶名</string>
    <string name="password">密碼</string>
    <string name="enter_user">請輸入用戶名</string>
    <string name="enter_pass">請輸入密碼</string>
    <string name="rp_pass">請重複密碼</string>
    <string name="enter_rppass">請確認密碼</string>
    <string name="gotoFL">開啟菲林之旅</string>
    <string name="account">賬號</string>
    <string name="phone">手機</string>
    <string name="my_code">我的二維碼</string>
    <string name="name">名字</string>
    <string name="dec">簡介</string>
    <string name="finish">完成</string>
    <string name="scan_code">掃描二維碼，關注我的菲林賬號</string>
    <string name="change_password">修改密碼</string>
    <string name="enter_newpass">請輸入新密碼</string>
    <string name="reply_newpass">請重複新密碼</string>
    <string name="new_pass">新密码</string>
    <string name="click_edit">點擊編輯卡片內容</string>
    <string name="repetPassword">請重複密碼</string>
    <string name="skillname">名稱</string>
    <string name="skillfiles">請將你的投稿文件以.doc,.docx或.的形式上傳。</string>
    <string name="choonsefiles">選擇文件</string>
    <string name="uploadfile">上傳文件</string>
    <string name="contentone">點擊編輯文字一</string>
    <string name="contenttwo">點擊编辑文字二</string>
    <string name="contentthree">點擊编辑文字三</string>
    <string name="readmore">閱讀全文</string>
    <string name="msg">投稿</string>
    <string name="module">模式</string>
    <string name="find">查找</string>
    <string name="scancode">二維碼</string>
    <string name="share">分享</string>
    <string name="detail">詳情</string>
    <string name="send">發送</string>
    <string name="check">預覽</string>
    <string name="delete">刪除</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="selectAll">全選</string>
    <string name="clearAll">清除</string>
</resources>
