<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="-5dp"
        android:src="#E4E3E3"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/mobile"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/account_login"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:stretchColumns="0">

        <TableRow>

            <EditText
                android:id="@+id/username_text"
                style="@style/login_register"
                android:layout_marginTop="80dp"
                android:hint="@string/enter_user"
                android:textColor="#000000"
                android:textColorHint="#9a9a9a" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/password_text"
                style="@style/login_register"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#9a9a9a" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/verify_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="84dp"
        android:text="@string/code_login" />

    <com.dd.CircularProgressButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/login_btn"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:cpb_textComplete="Success"
        app:cpb_textError="Failed"
        app:cpb_cornerRadius="48dp"
        app:cpb_textIdle="@string/login" />
</LinearLayout>