<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="-5dp"
        android:src="#E4E3E3"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/mobile"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/mobile_register"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone_num_text"
            style="@style/login_register"
            android:layout_marginTop="80dp"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="11dp"
            android:textColor="#000000"
            android:textColorHint="#9a9a9a" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/login_bt"
                android:hint="@string/code"
                android:inputType="number"
                android:maxLines="1"
                android:padding="11dp"
                android:textColor="#000000"
                android:textColorHint="#9a9a9a" />

            <Button
                android:id="@+id/send_code_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="#CAFF70"
                android:text="@string/send_code" />
        </LinearLayout>
    </LinearLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:cpb_cornerRadius="48dp"
        app:cpb_textComplete="Success"
        app:cpb_textError="Failed"
        app:cpb_textIdle="@string/next" />

</LinearLayout>