<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="-5dp"
        android:src="#E4E3E3"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/mobile"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/set_pass"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bt"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="#000000" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="#808A87" />

            <EditText
                android:id="@+id/username_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_user"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="#9a9a9a" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bt"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="#000000" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="#808A87" />

            <EditText
                android:id="@+id/password_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#444444"
                android:textColorHint="#9a9a9a" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bt"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/repetPassword"
                android:textColor="#000000" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="#808A87" />

            <EditText
                android:id="@+id/repeat_password_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_rppass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="#9a9a9a" />
        </LinearLayout>
    </LinearLayout>
    <com.dd.CircularProgressButton
        android:id="@+id/begin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:cpb_cornerRadius="48dp"
        app:cpb_textComplete="Success"
        app:cpb_textError="Failed"
        app:cpb_textIdle="@string/gotoFL" />

</LinearLayout>