<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="-5dp"
        android:src="#E4E3E3"
        tools:ignore="ContentDescription" />
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/user_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        fresco:fadeDuration="2000"
        fresco:placeholderImage="@mipmap/icon"
        fresco:progressBarAutoRotateInterval="2000"
        fresco:progressBarImage="@mipmap/icon_progress_small"
        fresco:progressBarImageScaleType="centerInside"
        fresco:roundAsCircle="true"
        fresco:roundingBorderColor="@android:color/holo_blue_light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/account"
        />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/phone"
        />
    <TextView
        android:id="@+id/phone_num_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/my_code"/>
        <ImageView
            android:id="@+id/code_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="150dp"
            android:src="@mipmap/erweima"
            tools:ignore="ContentDescription" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:hint="@string/name"
        android:layout_marginRight="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/dec" />

    <EditText
        android:hint="@string/dec"
        android:id="@+id/user_desc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:maxLines="3"/>
    <com.dd.CircularProgressButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/commit_btn"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:cpb_textComplete="Success"
        app:cpb_textError="Failed"
        app:cpb_cornerRadius="48dp"
        app:cpb_textIdle="@string/finish" />
</LinearLayout>